[gd_scene load_steps=3 format=3 uid="uid://cqco5x2268qdc"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_npekm"]
[ext_resource type="PackedScene" uid="uid://c8wc5wufdcxgl" path="res://Scenes/Toy.tscn" id="2_vr21u"]

[node name="Game" type="Node2D"]
script = ExtResource("1_npekm")

[node name="Background" type="ColorRect" parent="."]
z_index = -2
offset_top = -9.15527e-05
offset_right = 1150.0
offset_bottom = 653.0
mouse_filter = 2
color = Color(0.597691, 0.878436, 0.826656, 1)
metadata/_edit_use_anchors_ = true

[node name="Success" type="Node2D" parent="."]

[node name="Toy" parent="." instance=ExtResource("2_vr21u")]
position = Vector2(566, 335)
scale = Vector2(1.5, 1.5)

[node name="Score" type="Label" parent="."]
z_index = 1
offset_left = 186.0
offset_top = 67.0
offset_right = 948.0
offset_bottom = 157.0
theme_override_font_sizes/font_size = 40
text = "Toys Wrapped: 0"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Timer" type="Timer" parent="."]

[connection signal="toy_put_away" from="Toy" to="." method="_on_toy_put_away"]
[connection signal="toy_wrapped" from="Toy" to="." method="_on_toy_wrapped"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
